<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PluralsCandidate">
    <string name="app_name">Sight Words Test</string>
    <string name="yes_uppercase_text">YES</string>
    <string name="no_uppercase_text">NO</string>
    <string name="no_lowercase_text">no</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="change_to_default_text">Change to default</string>
    <string name="html_line_break">&lt;br/></string>
    <string name="html_italics_open">&lt;i></string>
    <string name="html_italics_close">&lt;/i></string>
    <string name="test_type_text">&lt;i>&lt;b>%1$s test&lt;/b> &lt;small>&lt;font color=#%2$s>(%3$s words)&lt;/font>&lt;/small>&lt;/i></string>
    <string name="test_type_for_students_test_result_fragment_text">&lt;i>&lt;b>%1$s tests&lt;/b> &lt;small>&lt;font color=#%2$s>(%3$s words)&lt;/font>&lt;/small>&lt;/i></string>
    <string name="html_text_with_color">&lt;font color=#%1$s>%2$s&lt;/font></string>
    <string name="all_radio_button_text">All</string>
    <string name="dolch_radio_button_text">Dolch</string>
    <string name="fry_radio_button_text">Fry</string>
    <string name="pdf_radio_button_text">PDF</string>
    <string name="csv_radio_button_text">CSV</string>
    <string name="word_list_radio_button_text">Words list</string>
    <string name="flash_cards_radio_button_text">Flash cards</string>
    <string name="simple_radio_button_text">Simple</string>
    <string name="detailed_radio_button_text">Detailed</string>
    <string name="shared_file_page_number_text">p. %1$d</string>
    <string name="lowercase_letter_s">s</string>
    <string name="singular_possession_suffix">\'s</string>
    <string name="plural_possession_suffix">s\'</string>
    <string name="information_image_view_content_description">
        Information icon
    </string>
    <string name="delete_icon_content_description"> Delete icon</string>
    <string name="activity_main_label">Your class</string>
    <string name="menu_title_with_color">&lt;font color=#%1$s&gt;%2$s&lt;/font&gt;</string>
    <string name="menu_main_action_add_students_manually_title">Add student</string>
    <string name="menu_main_action_sort_title">Sort students</string>
    <string name="dialog_fragment_sort_students_by_first_name_text">First name</string>
    <string name="dialog_fragment_sort_students_by_last_name_text">Last name</string>
    <string name="dialog_fragment_sort_students_by_test_result_text">Test result</string>
    <string name="dialog_fragment_sort_students_by_test_type_text">Test type</string>
    <string name="menu_main_action_sort_by_first_name_confirmation">Students sorted by first name</string>
    <string name="menu_main_action_sort_by_last_name_confirmation">Students sorted by last name</string>
    <string name="menu_main_action_sort_by_test_results_confirmation">Students sorted by test result</string>
    <string name="menu_main_action_sort_by_test_type_confirmation">Students sorted by test type</string>
    <string name="sort_students_dialog_fragment_title">Sort students by</string>
    <string name="sort_students_dialog_fragment_tag">sort_students_by</string>
    <string name="menu_main_action_share_title">Share students\' results</string>
    <string name="menu_main_action_share_csv_simple_chooser_title">Share results as a CSV file</string>
    <string name="menu_main_action_share_csv_detailed_chooser_title">Share results as a CSV file including words not read correctly</string>
    <string name="menu_main_action_share_pdf_simple_chooser_title">Share results as a PDF file</string>
    <string name="menu_main_action_share_pdf_detailed_chooser_title">Share results as a PDF file including words not read correctly</string>
    <string-array name="share_class_results_simple_csv_file_header_array">
        <item>First name</item>
        <item>Last name</item>
        <item>Test</item>
        <item>Last test date</item>
        <item>Result</item>
        <item>All words read correctly?</item>
    </string-array>
    <string-array name="share_class_results_detailed_csv_file_header_array">
        <item>First name</item>
        <item>Last name</item>
        <item>Test</item>
        <item>Last test date</item>
        <item>Result</item>
        <item>All words read correctly?</item>
        <item>Words not read correctly</item>
    </string-array>
    <string name="menu_main_action_change_title">Change default test</string>
    <string name="change_default_test_dialog_fragment_title">
        @string/menu_main_action_change_title</string>
    <string name="change_default_test_dialog_fragment_tag">dialog_fragment_change_default_test</string>
    <string name="menu_main_action_delete_title">Delete all students</string>
    <string name="menu_main_action_delete_confirmation_dialog_fragment_text">&lt;br/>You are going to delete &lt;b>all the students&lt;/b>
        in your class and all their test results.&lt;br/>&lt;br/>Are your sure?&lt;br/>&lt;br/></string>
    <string name="menu_main_action_delete_confirmation_dialog_fragment_title">@string/menu_main_action_delete_title</string>
    <string name="menu_main_action_delete_confirmation_dialog_fragment_tag">delete_class</string>
    <string name="menu_main_action_load_students_from_csv_title">Load students</string>
    <string name="menu_main_action_download_title">Download resources</string>
    <string name="menu_main_action_download_dialog_fragment_tag">download_resources</string>
    <string name="menu_main_action_download_resources_on_other_device_chooser_title">
        Share app resources web page link
    </string>
    <string name="menu_main_action_download_resources_on_other_device_share_subject">
        Sight Words Test application resources web page link
    </string>
    <string name="menu_main_action_sight_words_info_title">Sight words info</string>
    <string name="menu_main_action_help_title">Help</string>
    <string name="menu_main_action_feedback_title">Feedback</string>
    <string name="menu_main_action_donate_title">Donate</string>
    <string name="menu_main_action_feedback_confirmation_dialog_fragment_text">&lt;br/>Your feedback will help me improve this app and add new features to it.
        &lt;br/>&lt;br/>Would you like to &lt;b>send an email&lt;/b> with feedback for this app?&lt;br/>&lt;br/></string>
    <string name="menu_main_action_feedback_confirmation_dialog_fragment_title">@string/menu_main_action_feedback_title</string>
    <string name="menu_main_action_feedback_confirmation_dialog_fragment_tag">feedback</string>
    <string name="menu_main_action_donate_confirmation_dialog_fragment_text">&lt;br/>This app is completely free for you to use.
        &lt;br/>&lt;br/>If you find this app useful, would you consider making a &lt;b>donation&lt;/b> that can help me make more apps free and with no adds like this one?&lt;br/>&lt;br/></string>
    <string name="menu_main_action_donate_confirmation_dialog_fragment_title">@string/menu_main_action_donate_title</string>
    <string name="menu_main_action_donate_confirmation_dialog_fragment_tag">donate</string>
    <string name="menu_main_action_create_sample_class_title">Create sample class</string>
    <string name="create_sample_class_confirmation_dialog_fragment_text">&lt;br/>You will add 5 students with some test results to your class.&lt;br/>&lt;br/>
        You can delete this sample class by going to the main menu and pressing &lt;i>Delete all students&lt;/i>.
        &lt;br/>&lt;br/>Do you want to proceed?&lt;br/>&lt;br/></string>
    <string name="create_sample_class_confirmation_dialog_fragment_title">@string/menu_main_action_create_sample_class_title</string>
    <string name="create_sample_class_confirmation_dialog_fragment_tag">create_sample_class</string>
    <string name="menu_main_action_about_title">About</string>
    <string name="menu_action_mode_action_delete">Delete</string>
    <string name="student_with_no_tests_text">No test results</string>
    <string name="new_student_added_toast_text_1">%1$s %2$s added to your class</string>
    <string name="new_student_added_toast_text_2">%1$s added to your class</string>
    <string name="max_reached_message_text_1">&lt;br/>You have reached the maximum number of students in your
        classroom &lt;i>(%1$d students)&lt;/i>.&lt;br/>&lt;br/></string>
    <string name="max_reached_message_text_2">You have reached the maximum number of students in your
        classroom &lt;i>(%1$d students)&lt;/i>.</string>
    <string name="max_reached_message_title">Class full</string>
    <string name="max_reached_message_tag">new_student_added_max_reached_message_tag</string>
    <string name="empty_classroom_message_widget">Your class is empty</string>
    <string name="empty_classroom_message_1">&lt;a href="Add">&lt;i>Add&lt;/i>&lt;/a> or &lt;a href="Load">&lt;i>load&lt;/i>&lt;/a> students to your class.
        </string>
    <string name="empty_classroom_message_2">You can also &lt;a href="Sample">&lt;i>create a sample class&lt;/i>&lt;/a> to see
        how the app works before adding your own students.
        &lt;br/>&lt;br/>For instructions on how to use the app check the &lt;a href="Help">&lt;i>Help&lt;/i>&lt;/a> section.
        </string>
    <string name="activity_main_image_content_description">Teacher listening to her students</string>
    <string name="activity_main_sorted_by_first_name_message">Sorted by first name</string>
    <string name="activity_main_sorted_by_last_name_message">Sorted by last name</string>
    <string name="activity_main_sorted_by_test_result_message">Sorted by test result</string>
    <string name="activity_main_sorted_by_test_type_message">Sorted by test type</string>
    <string name="activity_main_sorted_by_message">%1$d student%2$s. %3$s</string>
    <string name="activity_main_not_loaded_reason_student_duplicated">duplicated</string>
    <string name="activity_main_not_loaded_reason_no_first_name">no first name</string>
    <string name="activity_main_not_loaded_reason_no_last_name">no last name</string>
    <string name="activity_main_not_loaded_reason_no_first_name_no_last_name">No first and last name</string>
    <string name="activity_main_not_loaded_reason_max_size_exceeded">class max size exceeded</string>
    <string name="action_mode_toolbar_title">%1$d selected</string>
    <string name="list_item_swipe_to_delete_text">Delete</string>
    <string name="student_complete_name">%1$s %2$s</string>
    <string name="student_complete_name_with_html_format">&lt;b>%1$s %2$s&lt;/b></string>
    <string name="test_type_and_last_date_for_no_default_test">%1$s (%2$d words). %3$s</string>
    <string name="activity_main_csv_file_test_type_text">%1$s (%2$d words)</string>
    <string name="activity_main_action_save_storage_error">ERROR! External storage not available. Please mount it.</string>
    <string name="activity_main_action_share_file_creation_error">ERROR! File to share could not be created.</string>
    <string name="menu_test_action_mark_words_title">Mark words not read correctly on last test</string>
    <string name="menu_test_action_info_title">Test info</string>
    <string name="menu_test_action_help_title">Test help</string>
    <string name="menu_student_test_results_action_show_graph_title">Show graph</string>
    <string name="menu_student_test_results_action_share_title">Share test results</string>
    <string name="menu_student_test_results_action_delete_title">Delete all test results</string>
    <string name="menu_student_test_results_action_delete_old_results_title">Delete oldest test results</string>
    <string name="menu_student_test_results_action_edit_title">Change student name</string>
    <string name="menu_student_test_results_action_change_title">Change student test</string>
    <string name="change_test_dialog_fragment_alert_message">All previous results for this student will be deleted if you change the students test.</string>
</resources>