<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.weebly.hectorjorozco.sightwordstest.ui.AddStudentFragment">

    <item
        android:id="@+id/menu_test_action_mark_unmark_words"
        android:icon="@drawable/ic_grid_white_24dp"
        android:title="@string/menu_test_action_mark_words_title"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/menu_test_action_info"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/menu_test_action_info_title"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/menu_test_action_help"
        android:icon="@drawable/ic_help_outline_white_24dp"
        android:title="@string/menu_test_action_help_title"
        app:showAsAction="never">
    </item>

</menu>



