<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/application_standard_margin"
            android:layout_marginTop="@dimen/application_large_margin"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingBottom="@dimen/application_large_padding">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/application_standard_margin"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/dialog_fragment_share_pdf_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pdf_radio_button_text"
                    android:textColor="@color/colorPrimaryDark"
                    android:theme="@style/controlStyle" />

                <RadioButton
                    android:id="@+id/dialog_fragment_share_csv_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/csv_radio_button_text"
                    android:textColor="@color/colorPrimaryDark"
                    android:theme="@style/controlStyle" />

            </RadioGroup>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/application_standard_margin"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/dialog_fragment_share_simple_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/simple_radio_button_text"
                    android:textColor="@color/colorPrimaryDark"
                    android:theme="@style/controlStyle" />

                <RadioButton
                    android:id="@+id/dialog_fragment_share_detailed_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_radio_button_text"
                    android:textColor="@color/colorPrimaryDark"
                    android:theme="@style/controlStyle" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/application_large_margin"
            android:layout_marginTop="@dimen/application_large_margin"
            android:layout_marginEnd="@dimen/application_large_margin"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/dialog_fragment_share_info_image_view_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/information_image_view_content_description"
                android:paddingTop="@dimen/application_tiny_margin"
                app:srcCompat="@drawable/ic_info_outline_color_primary_24dp" />

            <ImageView
                android:id="@+id/dialog_fragment_share_info_image_view_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_fragment_share_image_view_2_top_margin"
                android:contentDescription="@string/information_image_view_content_description"
                android:paddingTop="@dimen/application_tiny_margin"
                app:srcCompat="@drawable/ic_info_outline_color_primary_24dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>