<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/application_standard_margin"
        android:layout_marginTop="@dimen/application_large_margin"
        android:layout_marginEnd="@dimen/application_standard_margin"
        android:orientation="vertical"
        android:paddingBottom="@dimen/application_large_padding">


        <TextView
            android:id="@+id/change_test_dialog_fragment_warning_message_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/application_small_margin"
            android:layout_marginBottom="@dimen/application_large_margin"
            android:text="@string/change_test_dialog_fragment_alert_message"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/application_text_size"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- RadioGroup to select what kind of firstName lists to display on the spinner -->
            <RadioGroup
                android:id="@+id/change_test_dialog_fragment_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/application_test_type_radio_button_bottom_margin"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/change_test_dialog_fragment_dolch_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dolch_radio_button_text"
                    android:textColor="@color/colorPrimaryDark"
                    android:theme="@style/controlStyle" />

                <RadioButton
                    android:id="@+id/change_test_dialog_fragment_fry_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fry_radio_button_text"
                    android:textColor="@color/colorPrimaryDark"
                    android:theme="@style/controlStyle" />

            </RadioGroup>

            <ImageView
                android:id="@+id/change_test_dialog_fragment_info_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/application_large_margin"
                android:contentDescription="@string/information_image_view_content_description"
                android:paddingTop="@dimen/application_tiny_margin"
                app:srcCompat="@drawable/ic_info_outline_color_primary_24dp" />

        </LinearLayout>

        <Spinner
            android:id="@+id/change_test_dialog_fragment_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/application_standard_margin"
            android:visibility="visible" />

    </LinearLayout>

</ScrollView>