<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_fragment_download_resources_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/application_large_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/application_standard_margin"
                android:layout_marginTop="@dimen/application_large_margin"
                android:gravity="start"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/dialog_fragment_download_resources_resource_type_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/dialog_fragment_download_resources_word_list_radio_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/word_list_radio_button_text"
                        android:textColor="@color/colorPrimaryDark"
                        android:theme="@style/controlStyle" />

                    <RadioButton
                        android:id="@+id/dialog_fragment_download_resources_flash_cards_radio_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/flash_cards_radio_button_text"
                        android:textColor="@color/colorPrimaryDark"
                        android:theme="@style/controlStyle" />

                </RadioGroup>


                <RadioGroup
                    android:id="@+id/dialog_fragment_download_resources_test_type_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/application_large_margin"
                    android:layout_marginBottom="@dimen/application_test_type_radio_button_bottom_margin"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/dialog_fragment_download_resources_all_radio_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/all_radio_button_text"
                        android:textColor="@color/colorPrimaryDark"
                        android:theme="@style/controlStyle" />

                    <RadioButton
                        android:id="@+id/dialog_fragment_download_resources_dolch_radio_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dolch_radio_button_text"
                        android:textColor="@color/colorPrimaryDark"
                        android:theme="@style/controlStyle" />

                    <RadioButton
                        android:id="@+id/dialog_fragment_download_resources_fry_radio_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fry_radio_button_text"
                        android:textColor="@color/colorPrimaryDark"
                        android:theme="@style/controlStyle" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/application_large_margin"
                android:layout_marginTop="@dimen/application_large_margin"
                android:layout_marginEnd="@dimen/application_large_margin"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/dialog_fragment_download_resources_info_image_view_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/information_image_view_content_description"
                    android:paddingTop="@dimen/application_tiny_margin"
                    app:srcCompat="@drawable/ic_info_outline_color_primary_24dp" />

                <ImageView
                    android:id="@+id/dialog_fragment_download_resources_info_image_view_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dialog_fragment_download_resources_image_view_2_top_margin"
                    android:contentDescription="@string/information_image_view_content_description"
                    android:paddingTop="@dimen/application_tiny_margin"
                    app:srcCompat="@drawable/ic_info_outline_color_primary_24dp" />

            </LinearLayout>

        </LinearLayout>

        <Spinner
            android:id="@+id/dialog_fragment_download_resources_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/application_large_margin"
            android:layout_marginStart="@dimen/application_standard_margin"
            android:layout_marginEnd="@dimen/application_standard_margin"
            android:visibility="visible" />

    </LinearLayout>

</ScrollView>